subo cambios en cards

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             
         </nav>
         <!-- Jumbotron -->
-        <div class=" container-fluid p-5 text-center bg-image" alt="Panoramica del Monte Fuji con una pagoda al lado" style="background-image: url('assets/images/montefuji2.jpg'); height: 400px;">
+        <div class="container p-5 text-center bg-image" alt="Panoramica del Monte Fuji con una pagoda al lado" style="background-image: url('assets/images/montefuji2.jpg'); background-repeat: no-repeat; height: 400px;">
             <div class="row">
                 <div class="col-xl">
                     <div class="mask" style="background-color: rgb(44, 42, 42);">
@@ -73,7 +73,7 @@
         <div class="row">
             <!-- Card 1 -->
             <div class="col-xl-4">
-                <div class="card bg-dark text-white" style="height: 680px; width: 350px;">
+                <div class="card bg-dark text-white" style="height: 680px;">
                     <!-- Imagen -->
                     <img class="img-fluid" src="assets/images/noodles-teppanyaki.jpg" alt="Noodles-Teppanyaki">
                     <div class="card-body">
@@ -93,7 +93,7 @@
             </div>
             <!-- Card 2 -->
             <div class="col-xl-4">
-                <div class="card bg-dark text-white" style="height: 680px; width: 350px;">
+                <div class="card bg-dark text-white" style="height: 680px;">
                     <!-- Imagen -->
                     <img class="img-fluid" src="assets/images/uramaki-anguila.jpg" alt="Uramaki de anguila">
                     <div class="card-body">
@@ -113,7 +113,7 @@
             </div>
             <!-- Card 3 -->
             <div class="col-xl-4">
-                <div class="card bg-dark text-white" style="height: 680px; width: 350px;">
+                <div class="card bg-dark text-white" style="height: 680px;">
                     <!-- Imagen -->
                     <img class="img-fluid" src="assets/images/sopa-miso2.jpg" alt="Sopa miso" style="height: 350px;">
                     <div class="card-body">
